# image_depot

./: .gitignore  LICENSE  README.md  image_depot.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
depot/: __init__.py  base.py
image_depot/: __init__.py  depot_config.py  depot_type.py  image_depot.py
image_depot/depot/: __init__.py  ai58.py  base.py  bo_luo.py  cat_box.py  depot_config.py  dig_268608.py  error.py  github.py  hakaimg.py  hua_ban.py  image23.py  img_ax.py  img_url.py  imgbb.py  kawaii_su.py  niu_pic.py  none_type.py  png_cm.py  pomf_se.py  postimages.py  pz_al.py  riyugo.py  sm_ms.py  tucnag.py  uguu_se.py  xywm.py
