[build-system]
requires = ["setuptools>=61.0", ]
build-backend = "setuptools.build_meta"

[project]
name = "image_depot"
version = "0.9.3"
authors = [
  { name="hujingnb", email="hujingnb@qq.com" },
]
description = "图床上传工具"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "filetype"
]

[project.urls]
"Homepage" = "https://github.com/hujingnb/image_depot"
"Bug Tracker" = "https://github.com/hujingnb/image_depot/issues"